# pySatellite.github.io

./: .build-deploy.sh.swp  .gitignore  .pypyrc  25544&apiKey=WU7ZAN-GN3CE9-G9MTW3-4R54  404.html  README.md  build-deploy.sh  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml  t1q3.ipynb  test.sh
.github/workflows/: codeql-analysis.yml
contributhon/: index.html
docs/: contributhon.md  docs-pysatellite.md  index.md
docs-pysatellite/: index.html
report/coverage/: coverage.xml
report/test/: tests.xml
search/: search_index.json
src/pysatellite/: __init__.py  cli.py  rocket.py  satellite.py
tests/pysatellite/: test_cli.py  test_rocket.py  test_satellite.py
