[metadata]
name = pysatellite
version = 0.0.1
author = pySatellite
author_email = pySatellite@gmail.com
description = simulate satellite tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pySatellite.github.io
project_urls =
    Bug Tracker = https://github.com/pySatellite/pySatellite.github.io/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src