[metadata]
name = pySatellite
version = 0.2.0
author = pySatellite
author_email = pySatellite@gmail.com
description = simulate satellite tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pySatellite.github.io
project_urls =
    Bug Tracker = https://github.com/pySatellite/pySatellite.github.io/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pySatellite-ping = pysatellite.cli:ping
    pySatellite-뭐하니 = pysatellite.cli:what_are_you_doing
    pySatellite-what_are_you_doing = pysatellite.cli:what_are_you_doing
    pySatellite-where-are-you-now = pysatellite.cli:cli_where_are_you_now
